# Dark

./: CMakeLists.txt  README.md  vcpkg.json
Dark/: CMakeLists.txt
Dark/src/Dark/: Application.cpp  Application.h  TODO.cpp
Dark/src/Dark/ECheck/: ECheck.cpp  ECheck.h
Dark/src/Dark/Events/: InputManager.cpp  InputManager.h
Dark/src/Dark/GUI/: GUI.cpp  GUI.h
Dark/src/Dark/Graphics/: FrameBuffer.cpp  FrameBuffer.h  Graphics.h  IndexBuffer.cpp  IndexBuffer.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.h  Texture.h  TextureAtlas.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h
Dark/src/Dark/Math/: Random.cpp  Random.h
Dark/src/Dark/Renderer/: Renderer2D.cpp  Renderer2D.h
Dark/src/Dark/Scene/: Camera2D.cpp  Camera2D.h  Components.cpp  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneSerializer.cpp  SceneSerializer.h  World.h
Dark/src/Dark/Utils/: Dark.h  KeyCodes.h  MouseButtonCodes.h  ResourceManager.cpp  ResourceManager.h
DarkEditor/: CMakeLists.txt
DarkEditor/src/: Application.cpp  Application.h  EditorScene.cpp  EditorScene.h  main.cpp
imgui_views/: imgui1.ini  imgui2.ini  imgui3.ini  imgui4.ini
resources/shaders/: frag.frag.txt  vert.vert.txt
